fix: headline spacing

--- a/src/styles/components/Header.styl
+++ b/src/styles/components/Header.styl
@@ -3,7 +3,6 @@
 header {
     _pad_top = 20px;
     _pad_side = 70px;
-    --pad-side: _pad_side * 2;
     position: fixed;
     box-sizing: border-box;
     top: 0;
