--- a/src/styles/features/Head.styl
+++ b/src/styles/features/Head.styl
@@ -30,7 +30,8 @@ div.head {
 
         h1 {
             H1(primary_color);
-            line-height: 4rem;
+            line-height: 3rem;
+            margin-bottom: 1rem
         }
 
         h2 {
